testdata/invalid/internal/pkg/domain_alias.go
package pkg

import _ "github.com/kimtaeyun/testproject-dc-invalid/internal/domain/order"

func UseDomain() {}
